css/main.css
/* ==========================================================================
   Lekta custom styles
   ========================================================================== */
html {
  overflow-x: hidden;
}

.lekta-border {
  border: 5px solid #000000;
}
#title{
  height: 282px;
}
.white-border-bottom {
  border-left: 5px solid #ffffff;
  border-bottom: 5px solid #ffffff;
  border-right: 5px solid #ffffff;
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
}

.white-border-top {
  width: 100%;
  height: 100%;
  border-left: 5px solid #ffffff;
  border-top: 5px solid #ffffff;
}

.vertical-align {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
}

h2 {
  color: #000000;
  font-family: Sailec;
  font-size: 72px;
  font-weight: 700;
  letter-spacing: 0.5px;
  line-height: 86px;
  width: 564px;
  text-align: left;
}

p {
  color: #000000;
  font-family: Sailec;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 1px;
  line-height: 18px;
}

.mt-100 {
  margin-top: 100px;
}

.mt-50 {
  margin-top: 50px;
}

.white_stripes_left {
  position: absolute;
  top: -90px;
}

.white_stripes_right {
  position: absolute;
  top: -90px;
  right: 112px;
}

.purple_background {
  background-image: url(../img/purple_background.svg);
  margin-left: -80px;
  padding-left: 60px;
  margin-bottom: -80px;
  padding-bottom: 60px;
  margin-right: -80px;
  padding-right: 60px;
  background-size: contain;
  background-repeat: no-repeat;
  background-color: #bf33b3;
}

/* Overrides default bootstrap container width */
@media (min-width: 1250px) {
  .container {
    width: 1250px;
  }
}

.frame {
  max-width: 1300px;
  margin: 0 auto;
  border: 5px solid #000000;
}

.header_section .fill {
  min-width: 100%;
  height: 800px;
  margin-top: -80px;
  margin-left: -80px;
  background-image: url(../img/header_fill.svg);
  padding-left: 60px;
  padding-top: 75px;
}

.header_section h1 {
  color: #000000;
  font-family: Sailec;
  font-size: 88px;
  font-weight: 700;
  letter-spacing: 1px;
  line-height: 94px;
  width: 772px;
  text-align: left;
  margin-top: 40px;
  margin-bottom: 40px;
}

.header_section h2 {
  color: #000000;
  font-family: Sailec;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 1px;
  line-height: 20px;
  text-align: left;
  width: 385px;
}

.header_section .lekta_logo {
  width: 279px;
  height: 47px;
}

/* What makes us differen section */
.differen_section {
  margin-top: 65px;
}

.differen_section h3 {
  color: #000000;
  font-family: Sailec;
  font-size: 36px;
  font-weight: 700;
  letter-spacing: 1px;
  line-height: 43px;
  width: 145px;
  text-align: left;
  word-break: break-all;
  hyphens: auto;
  margin-top: 0px;
}

.differen_section .bullet {
  margin-bottom: 15px;
}

.differen_section p {
  color: #000000;
  font-family: Sailec;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 1px;
  line-height: 18px;
  width: 200px;
  text-align: left;
}

/* What we offer section */
.offer_section {
  margin-top: 65px;
}

.offer_section .fill {
  min-width: 100%;
  height: 800px;
  margin-left: -80px;
  background-image: url(../img/galaxy.jpg);
  display: flex;
  align-items: center;
}

.offer_section h2 {
  color: #FFFFFF;
  font-family: Sailec;
  font-size: 144px;
  font-weight: 700;
  letter-spacing: 1px;
  line-height: 173px;
  text-align: left;
  line-height: 85px;
  margin-left: 100px;
}

.offer_section h2.bottom {
  font-size: 72px;
}

.offer_section h3 {
  color: #000000;
  font-family: Sailec;
  font-size: 36px;
  font-weight: 700;
  letter-spacing: 2.1px;
  line-height: 43px;
  text-align: right;
  text-transform: uppercase;
}

.offer_section p {
  color: #000000;
  font-family: Sailec;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 1px;
  line-height: 18px;
  width: 200px;
  text-align: left;
}

.offer_section h3, .offer_section p {
  width: 200px;
}

/* Technology section */
.technology_section .fill {
  min-width: 100%;
  height: 800px;
  margin-right: -80px;
  background-image: url(../img/galaxy.jpg);
  display: flex;
  align-items: center;
}

.technology_section h3 {
  color: #000000;
  font-family: Sailec;
  font-size: 36px;
  font-weight: 700;
  letter-spacing: 2.1px;
  line-height: 43px;
  text-align: left;
  text-transform: uppercase;
}

.technology_section h2 {
  color: #FFFFFF;
  font-family: Sailec;
  font-size: 144px;
  font-weight: 700;
  letter-spacing: 1px;
  line-height: 173px;
  text-align: left;
  line-height: 85px;
  margin-left: 10px;
}

.technology_section h2.bottom {
  font-size: 72px;
}

.technology_section p {
  color: #000000;
  font-family: Sailec;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 1px;
  line-height: 18px;
  width: 200px;
  text-align: left;
}

.technology_section h3, .technology_section p {
  width: 200px;
}

/* FAQ SECTION */
.faq_section {
  padding-top: 20px;
  margin-top: 52px;
}

/* SUBSCRIBE SECTION */
.subscribe_section {
  margin-top: 100px;
}

.subscribe_section .subscribe-form {
  min-height: 250px;
  background-image: url(../img/form_background.svg);
  background-position: center;
  background-repeat: no-repeat;
}

.subscribe_section .subscribe-form button {
  background-color: #E3FA00;
  border: 2px solid #000000;
  font-family: Sailec;
  font-size: 14px;
  font-weight: bold;
  margin-left: 10px;
}

.subscribe_section .subscribe-form input {
  background-color: #E3FA00;
  border: none;
  border-bottom: 2px solid #000000;
  outline: none;
  font-family: Sailec;
  font-size: 14px;
  box-shadow: none;
}

